apps/public/immich.rohrbom.be/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-immich
  labels:
    gitops: flux
