apps/public/immich.rohrbom.be/service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-database
  namespace: svc-immich
spec:
  selector:
    app: immich-database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
