apps/public/immich.rohrbom.be/service-machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: svc-immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
