apps/public/immich.rohrbom.be/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: svc-immich
spec:
  selector:
    app: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
