apps/public/immich.rohrbom.be/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: svc-immich
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: http
