apps/public/immich.rohrbom.be/netpol-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-immich-from-public-ingress
  namespace: svc-immich
spec:
  podSelector:
    matchLabels:
      app: immich-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-30
      ports:
        - protocol: TCP
          port: 2283
