apps/public/immich.rohrbom.be/netpol-redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-immich-server
  namespace: svc-immich
spec:
  podSelector:
    matchLabels:
      app: immich-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: immich-server
      ports:
        - protocol: TCP
          port: 6379
